@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.860 - Reworked the augment system to use the extdata library. Consequently enabled evolith support.
+-------------------------------------------------
 GearSwap 0.851 - Added Load command and file path support for a libs folder.
 -------------------------------------------------
 GearSwap 0.850 - Japanese support.
